<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.qlee</groupId>
	<artifactId>code_challenge</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>code_challenge</name>
	<description>Demo project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<spring-boot-admin.version>2.0.2</spring-boot-admin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>de.codecentric</groupId>
			<artifactId>spring-boot-admin-starter-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.16.16</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>de.flapdoodle.embed</groupId>
			<artifactId>de.flapdoodle.embed.mongo</artifactId>
			<version>1.48.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-dependencies</artifactId>
				<version>${spring-boot-admin.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
	</build>


	<profiles>
	<profile>
	<id>test</id>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>com.github.joelittlejohn.embedmongo</groupId>
					<artifactId>embedmongo-maven-plugin</artifactId>
					<version>0.3.4</version>
					<executions>
						<execution>
							<id>start</id>
							<goals>
								<goal>start</goal>
							</goals>
							<configuration>
								<port>27017</port>
								<version>2.6.0</version>
								<databaseDirectory>${project.build.directory}/mongo</databaseDirectory>
								<logging>file</logging>
								<logFile>${project.build.directory}/mongo/myfile.log</logFile>
								<logFileEncoding>utf-8</logFileEncoding>
							</configuration>
						</execution>
						<execution>
							<id>stop</id>
							<goals>
								<goal>stop</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<url>http://localhost:8080/</url>
						<server>localhost</server>
						<path>/</path>
						<username>tomcat</username>
						<password>tomcat</password>
					</configuration>
					<executions>
						<execution>
							<id>start-tomcat</id>
							<phase>pre-integration-test</phase>
							<goals>
								<goal>run-war-only</goal>
							</goals>
							<configuration>
								<scanIntervalSeconds>0</scanIntervalSeconds>
								<fork> true </fork>
							</configuration>
						</execution>
						<execution>
							<id>stop-tomcat</id>
							<phase>post-integration-test</phase>
							<goals>
								<goal>shutdown</goal>
							</goals>
							<configuration>
								<scanIntervalSeconds>0</scanIntervalSeconds>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.18</version>
					<configuration>
						<!-- <argLine>-Xmx512m -XX:MaxPermSize=512m -Dtarget.server=${test.target.server}
                            ${failsafeArgLine}</argLine> -->
						<includes>
							<include>*Test.java</include>
						</includes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>integration-test</goal>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<!-- <argLine>-XX:PermSize=512m -Xmx512m -XX:MaxPermSize=1024m</argLine> -->
						<!-- skips surefire tests without skipping failsafe tests. Property
                            value seems to magically default to false -->
						<skipTests>true</skipTests>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

	</build>
	</profile>
	</profiles>
</project>
